Fix alignment issues for nav item dots; add padding to all pages to account for navigation

--- a/css/main.css
+++ b/css/main.css
@@ -1027,6 +1027,7 @@ span {
         -ms-flex-direction: column;
             flex-direction: column;
     margin: 0;
+    padding: 0;
     list-style: none; }
   .main-nav .nav__item a {
     position: relative;
@@ -1038,18 +1039,15 @@ span {
     .main-nav .nav__item a:after {
       content: '';
       position: absolute;
-      top: 50%;
-      right: 50%;
+      top: calc(50% - 5px);
+      right: calc(50% - 5px);
       width: 10px;
       height: 10px;
       border-radius: 100%;
       background-color: #E3DED4;
       -webkit-transition: background-color calc(0.7s / 2);
       -o-transition: background-color calc(0.7s / 2);
-      transition: background-color calc(0.7s / 2);
-      -webkit-transform: translateX(-50%) translateY(-50%);
-          -ms-transform: translateX(-50%) translateY(-50%);
-              transform: translateX(-50%) translateY(-50%); }
+      transition: background-color calc(0.7s / 2); }
     .main-nav .nav__item a span {
       position: absolute;
       top: 50%;
@@ -1102,10 +1100,10 @@ span {
       -ms-flex-align: center;
           align-items: center; }
 
-@media (min-width: 1900px) {
+@media (min-width: 1600px) {
   .app__inner {
     position: relative;
-    width: 1900px;
+    width: 1600px;
     min-height: 100vh;
     top: 0;
     left: 50%;
@@ -1122,6 +1120,7 @@ span {
   left: 0;
   width: 100%;
   opacity: 0;
+  padding-right: 50px;
   visibility: hidden;
   -webkit-transition: all 0.7s ease 0s;
   -o-transition: all 0.7s ease 0s;
@@ -1130,10 +1129,6 @@ span {
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 19vh; }
-    .page__inner:after {
-      content: '';
-      clear: both;
-      display: table; }
     @media (min-width: 700px) {
       .page__inner {
         padding-left: 30px;
@@ -1142,6 +1137,10 @@ span {
       .page__inner {
         padding-left: 50px;
         padding-right: 50px; } }
+    .page__inner:after {
+      content: '';
+      clear: both;
+      display: table; }
   .page__left {
     float: left;
     width: 50%;
@@ -1149,19 +1148,13 @@ span {
     -webkit-transition: all 0.7s calc(0.7s / 4);
     -o-transition: all 0.7s calc(0.7s / 4);
     transition: all 0.7s calc(0.7s / 4); }
-    @media (min-width: 700px) {
-      .page__left {
-        padding-right: 30px; } }
-    @media (min-width: 700px) {
-      .page__left {
-        padding-right: 50px; } }
   .page__right {
     float: left;
     width: 50%;
     opacity: 0;
-    -webkit-transition: all 0.7s calc(0.7s / 3);
-    -o-transition: all 0.7s calc(0.7s / 3);
-    transition: all 0.7s calc(0.7s / 3); }
+    -webkit-transition: all 0.7s calc(0.7s / 2);
+    -o-transition: all 0.7s calc(0.7s / 2);
+    transition: all 0.7s calc(0.7s / 2); }
     @media (min-width: 700px) {
       .page__right {
         padding-left: 30px; } }
