--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // Media Breakpoints
 $break-medium: 700px;
 $break-large: 1024px;
-$content-max: 1900px;
+$content-max: 1600px;
 
 // Colors
 $color-red: #EB2A41;
